--- a/Git-Watcher/Git-Watcher_Client/Resources/layout/content_main.axml
+++ b/Git-Watcher/Git-Watcher_Client/Resources/layout/content_main.axml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main">
-
-    <TextView
+    tools:showIn="@layout/app_bar_main"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/emailTxt"
+        android:id="@+id/githubLogo"
         android:layout_centerInParent="true"
-        android:text="Hello World!" />
+        android:src="@drawable/githubmark"
+    />
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/emailTxt"
+        android:hint="Email/Username for login"
+   />
+    <EditText
+        android:inputType="textPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/passwordTxt"
+        android:hint="Password for login"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/emailTxt" 
+    />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loginBtn"
+        android:text="Login"
+        android:layout_below="@+id/passwordTxt"
+        android:layout_centerInParent="true"
+        android:onClick="OnLoginBtnClick" 
 
-</RelativeLayout>
+    />
+
+
+
+</RelativeLayout> 
