moved login to own view

--- a/Git-Watcher/Git-Watcher_Client/Resources/layout/content_main.axml
+++ b/Git-Watcher/Git-Watcher_Client/Resources/layout/content_main.axml
@@ -9,41 +9,11 @@
     tools:showIn="@layout/app_bar_main"
     android:minWidth="25px"
     android:minHeight="25px">
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/emailTxt"
-        android:id="@+id/githubLogo"
-        android:layout_centerInParent="true"
-        android:src="@drawable/githubmark"
-    />
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/emailTxt"
-        android:hint="Email/Username for login"
-   />
-    <EditText
-        android:inputType="textPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/passwordTxt"
-        android:hint="Password for login"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/emailTxt" 
-    />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/loginBtn"
-        android:text="Login"
-        android:layout_below="@+id/passwordTxt"
-        android:layout_centerInParent="true"
-        android:onClick="OnLoginBtnClick" 
-
-    />
-
+        android:text = "Hello there!"
+        />
 
 
 </RelativeLayout> 
