--- a/Git-Watcher/Git-Watcher_Client/Resources/layout/reposearch.axml
+++ b/Git-Watcher/Git-Watcher_Client/Resources/layout/reposearch.axml
@@ -21,7 +21,7 @@
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/searchRepoResult"
+        android:id="@+id/searchRepoList"
         android:isScrollContainer="true" />
     <Button
         android:text="Cancel"
